--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mocha": "^8.3.0",
     "nyc": "^15.1.0",
     "sinon": "^9.2.4",
+    "ts-loader": "^9.1.2",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.5",
