--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
-    "allowJs": false,
+    "allowJs": true,
+    "checkJs": false,
+    "outDir": "./dist/",
     "baseUrl": ".",
+    "declaration": true,
     "esModuleInterop": true,
     "lib": ["dom", "esnext.asynciterable", "es2017", "es2016", "es2015"],
     "module": "commonjs",
     "moduleResolution": "node",
     "paths": { "*": ["src/*", "*", "frontend/*", "backend/*"] },
     "rootDir": "",
+    "strict": false,
     "target": "es2016",
-    "typeRoots": ["./@types", "./node_modules/@types"]
   },
-  "exclude": ["dist/**/*"]
+  "exclude": ["dist"]
 }
