--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "automerge",
   "version": "1.0.1-preview.0",
   "description": "Data structures for building collaborative applications",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
     "browsertest": "karma start",
